--- a/.github/workflows/openvpn.yaml
+++ b/.github/workflows/openvpn.yaml
@@ -8,5 +8,6 @@ jobs:
     steps:
       - name: Install OpenVPN
         run: |
+          sudo rm -f /etc/apt/sources.list.d/archive_uri-*
           sudo apt update
           sudo apt install -y openvpn openvpn-systemd-resolved
